<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/displayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_textview__value"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstname_edittext_hint"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastname_edittext_hint"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_value"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_section">


        <TextView
            android:id="@+id/warningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_value"
            android:textAlignment="center"
            android:textSize="50sp" />

        <Button
            android:id="@+id/forbidden_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forbidden_button_value" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>